<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/terminus"
        android:text="@string/app_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_number_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/terminus"
        android:hint="@string/hint_number_one"
        android:paddingEnd="16sp"
        android:paddingStart="16sp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_number_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/terminus"
        android:hint="@string/hint_number_two"
        android:paddingEnd="16sp"
        android:paddingStart="16sp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_number_one"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/terminus"
        android:text="@string/initial_result"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_number_two"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_number_two"
        app:layout_constraintTop_toBottomOf="@+id/et_number_two" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_add"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_sub"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@+id/btn_add"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_div"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/btn_add"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_mul"
        android:backgroundTint="@color/button"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_div"
        app:layout_constraintEnd_toEndOf="@+id/btn_sub"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/btn_sub"
        app:layout_constraintTop_toTopOf="@+id/btn_div"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/btn_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_ac"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sub"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toEndOf="@+id/btn_sub"
        app:layout_constraintTop_toTopOf="@+id/btn_sub"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/btn_pow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/terminus"
        android:text="@string/button_text_pow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mul"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/btn_ac"
        app:layout_constraintTop_toTopOf="@+id/btn_mul"
        app:layout_constraintWidth_percent=".20" />


</androidx.constraintlayout.widget.ConstraintLayout>